ECL 0.9k:
=========

* Visible changes:

 - The documentation is slowly disappearing form this source tree, as there
   is a different tree (ecl-doc) which contains the XML sources for a more
   complete manual.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***